<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="3"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2"
        android:weightSum="5"
        android:id="@+id/menu_options">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight=".5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="MEALS"
                android:textSize="36dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="6">

            <Button
                android:id="@+id/porkchop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/porkchop"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/tapa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tapa"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/tocino"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tocino"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/friedChicken"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/friedChicken"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/daingNaBangus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/daingNaBangus"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/porkSisig"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/porkSisig"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="6"
            android:baselineAligned="false">

            <Button
                android:id="@+id/chickenLongganisa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/chickenLongganisa"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/grilledSpareribs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/grilledSpareribs"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/garlicLongganisa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/grilledSpareribs"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight=".5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="EXTRA"
                android:textSize="36dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight=".5"
            android:weightSum="6">

            <Button
                android:id="@+id/extraPorkchop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="EXTRA PORKCHOP"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/extraTapa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="EXTRA TAPA"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/extraTocino"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="EXTRA TOCINO"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/extraFriedChicken"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="EXTRA FRIED CHICKEN"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/extraDaingNaBangus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="EXTRA DAING NA BANGUS"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/extraPorkSisig"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="EXTRA PORK SISIG"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight=".5"
            android:weightSum="6">

            <Button
                android:id="@+id/extraChickenLongganisa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="EXTRA CHICKEN LONGGANISA"
                android:layout_weight="1"/>


            <Button
                android:id="@+id/extraGrilledSpareribs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="EXTRA GRILLED SPARERIBS"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/extraGarlicLongganisa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="EXTRA GARLIC LONGGANISA"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/extraFriedRice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="EXTRA FRIED RICE"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/extraEgg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="EXTRA EGG"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight=".5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="DRINKS"
                android:textSize="36dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight=".5"
            android:weightSum="6">

            <Button
                android:id="@+id/sodaInCan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/sodaInCan"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bottledWater"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bottledWater"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/juiceInCan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/juiceInCan"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight=".5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TODO: INSERT ORDER DETAILS HERE"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="3">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/order_list">



            </ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight=".5"
            android:weightSum="2">

            <Button
                android:id="@+id/dineIn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/dineIn"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/takeOut"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/takeOut"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>